// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`config/index mergeChildConfig(parentConfig, childConfig) filterConfig() 1`] = `
Object {
  "additionalReviewers": Array [],
  "aliases": Object {},
  "allowedPostUpgradeCommands": Array [],
  "assignAutomerge": false,
  "assignees": Array [],
  "assigneesSampleSize": null,
  "automerge": false,
  "automergeComment": "automergeComment",
  "automergeType": "pr",
  "azureAutoComplete": false,
  "azureWorkItemId": 0,
  "baseDir": null,
  "bbUseDefaultReviewers": true,
  "binarySource": "auto",
  "branchName": "{{{branchPrefix}}}{{{managerBranchPrefix}}}{{{branchTopic}}}",
  "branchTopic": "{{{depNameSanitized}}}-{{{newMajor}}}{{#if isPatch}}.{{{newMinor}}}{{/if}}.x{{#if isLockfileUpdate}}-lockfile{{/if}}",
  "bumpVersion": null,
  "cacheDir": null,
  "commitBody": null,
  "commitBodyTable": false,
  "commitMessage": "{{{commitMessagePrefix}}} {{{commitMessageAction}}} {{{commitMessageTopic}}} {{{commitMessageExtra}}} {{{commitMessageSuffix}}}",
  "commitMessageAction": "Update",
  "commitMessageExtra": "to {{#if isMajor}}v{{{newMajor}}}{{else}}{{#if isSingleVersion}}v{{{toVersion}}}{{else}}{{{newValue}}}{{/if}}{{/if}}",
  "commitMessagePrefix": null,
  "commitMessageSuffix": null,
  "commitMessageTopic": "dependency {{depName}}",
  "compatibility": Object {},
  "composerIgnorePlatformReqs": true,
  "configWarningReuseIssue": true,
  "dockerMapDotfiles": false,
  "dockerUser": null,
  "dryRun": false,
  "endpoint": null,
  "excludeCommitPaths": Array [],
  "gitAuthor": null,
  "gitLabAutomerge": false,
  "gitPrivateKey": null,
  "group": Object {
    "branchTopic": "{{{groupSlug}}}",
    "commitMessageTopic": "{{{groupName}}}",
  },
  "groupName": null,
  "groupSlug": null,
  "ignoreNpmrcFile": false,
  "ignoreScripts": false,
  "labels": Array [],
  "lazyGrouping": true,
  "managerBranchPrefix": "",
  "masterIssue": false,
  "masterIssueApproval": false,
  "masterIssueAutoclose": false,
  "masterIssueTitle": "Update Dependencies (Renovate Bot)",
  "onboardingBranch": "renovate/configure",
  "onboardingPrTitle": "Configure Renovate",
  "persistRepoData": false,
  "pinDigests": false,
  "platform": "github",
  "postUpdateOptions": Array [],
  "postUpgradeTasks": Object {
    "commands": Array [],
    "fileFilters": Array [],
  },
  "prBodyColumns": Array [
    "Package",
    "Type",
    "Update",
    "Change",
  ],
  "prBodyDefinitions": Object {
    "Change": "\`{{{displayFrom}}}\` -> \`{{{displayTo}}}\`",
    "Current value": "{{{currentValue}}}",
    "New value": "{{{newValue}}}",
    "Package": "{{{depNameLinked}}}",
    "Package file": "{{{packageFile}}}",
    "References": "{{{references}}}",
    "Type": "{{{depType}}}",
    "Update": "{{{updateType}}}",
  },
  "prBodyNotes": Array [],
  "prConcurrentLimit": 0,
  "prCreation": "immediate",
  "prHourlyLimit": 0,
  "prNotPendingHours": 25,
  "prPriority": 0,
  "prTitle": null,
  "printConfig": false,
  "productLinks": Object {
    "documentation": "https://docs.renovatebot.com/",
    "help": "https://github.com/renovatebot/config-help/issues",
    "homepage": "https://github.com/renovatebot/renovate",
  },
  "pruneStaleBranches": true,
  "rangeStrategy": "replace",
  "rebaseLabel": "rebase",
  "rebaseWhen": "auto",
  "recreateClosed": false,
  "requiredStatusChecks": Array [],
  "reviewers": Array [],
  "reviewersSampleSize": null,
  "rollbackPrs": false,
  "schedule": Array [
    "at any time",
  ],
  "semanticCommitScope": "deps",
  "semanticCommitType": "chore",
  "semanticCommits": null,
  "separateMajorMinor": true,
  "separateMinorPatch": false,
  "skipInstalls": null,
  "stabilityDays": 0,
  "statusCheckVerify": false,
  "suppressNotifications": Array [
    "deprecationWarningIssues",
  ],
  "timezone": null,
  "unicodeEmoji": true,
  "unpublishSafe": false,
  "updateLockFiles": true,
  "versioning": "semver",
  "vulnerabilityAlerts": Object {
    "commitMessageSuffix": "[SECURITY]",
    "groupName": null,
    "masterIssueApproval": false,
    "rangeStrategy": "update-lockfile",
    "schedule": Array [],
  },
}
`;

exports[`config/index mergeChildConfig(parentConfig, childConfig) getManagerConfig() 1`] = `
Object {
  "additionalReviewers": Array [],
  "aliases": Object {},
  "allowedPostUpgradeCommands": Array [],
  "assignAutomerge": false,
  "assignees": Array [],
  "assigneesSampleSize": null,
  "autodiscover": false,
  "autodiscoverFilter": null,
  "automerge": false,
  "automergeComment": "automergeComment",
  "automergeType": "pr",
  "azureAutoComplete": false,
  "azureWorkItemId": 0,
  "baseBranches": Array [],
  "baseDir": null,
  "bbUseDefaultReviewers": true,
  "binarySource": "auto",
  "branchName": "{{{branchPrefix}}}{{{managerBranchPrefix}}}{{{branchTopic}}}",
  "branchPrefix": "renovate/",
  "branchTopic": "{{{depNameSanitized}}}-{{{newMajor}}}{{#if isPatch}}.{{{newMinor}}}{{/if}}.x{{#if isLockfileUpdate}}-lockfile{{/if}}",
  "bumpVersion": null,
  "cacheDir": null,
  "commitBody": null,
  "commitBodyTable": false,
  "commitMessage": "{{{commitMessagePrefix}}} {{{commitMessageAction}}} {{{commitMessageTopic}}} {{{commitMessageExtra}}} {{{commitMessageSuffix}}}",
  "commitMessageAction": "Update",
  "commitMessageExtra": "to {{#if isMajor}}v{{{newMajor}}}{{else}}{{#if isSingleVersion}}v{{{toVersion}}}{{else}}{{{newValue}}}{{/if}}{{/if}}",
  "commitMessagePrefix": null,
  "commitMessageSuffix": null,
  "commitMessageTopic": "dependency {{depName}}",
  "compatibility": Object {},
  "composerIgnorePlatformReqs": true,
  "configWarningReuseIssue": true,
  "description": Array [],
  "digest": Object {
    "branchTopic": "{{{depNameSanitized}}}-digest",
    "commitMessageExtra": "to {{newDigestShort}}",
    "commitMessageTopic": "{{{depName}}} commit hash",
  },
  "dockerMapDotfiles": false,
  "dockerUser": null,
  "dryRun": false,
  "enabled": true,
  "enabledManagers": Array [],
  "encrypted": null,
  "endpoint": null,
  "excludeCommitPaths": Array [],
  "extends": Array [],
  "fileMatch": Array [
    "(^|/)package.json$",
  ],
  "followTag": null,
  "force": null,
  "forceCli": true,
  "forkMode": false,
  "gitAuthor": null,
  "gitLabAutomerge": false,
  "gitPrivateKey": null,
  "group": Object {
    "branchTopic": "{{{groupSlug}}}",
    "commitMessageTopic": "{{{groupName}}}",
  },
  "groupName": null,
  "groupSlug": null,
  "hostRules": Array [
    Object {
      "timeout": 60000,
    },
  ],
  "ignoreDeprecated": true,
  "ignoreDeps": Array [],
  "ignoreNpmrcFile": false,
  "ignorePaths": Array [
    "**/node_modules/**",
    "**/bower_components/**",
  ],
  "ignorePresets": Array [],
  "ignoreScripts": false,
  "ignoreUnstable": true,
  "includeForks": false,
  "includePaths": Array [],
  "java": Object {},
  "labels": Array [],
  "language": "js",
  "lazyGrouping": true,
  "lockFileMaintenance": Object {
    "branchTopic": "lock-file-maintenance",
    "commitMessageAction": "Lock file maintenance",
    "commitMessageExtra": null,
    "commitMessageTopic": null,
    "enabled": false,
    "groupName": null,
    "prBodyDefinitions": Object {
      "Change": "All locks refreshed",
    },
    "rebaseStalePrs": true,
    "recreateClosed": true,
    "schedule": Array [
      "before 5am on monday",
    ],
  },
  "logContext": null,
  "logFile": null,
  "logFileLevel": "debug",
  "logLevel": "info",
  "major": Object {},
  "manager": "npm",
  "managerBranchPrefix": "",
  "masterIssue": false,
  "masterIssueApproval": false,
  "masterIssueAutoclose": false,
  "masterIssueTitle": "Update Dependencies (Renovate Bot)",
  "minor": Object {},
  "npmToken": null,
  "npmrc": null,
  "onboarding": true,
  "onboardingBranch": "renovate/configure",
  "onboardingConfig": Object {
    "$schema": "https://docs.renovatebot.com/renovate-schema.json",
  },
  "onboardingPrTitle": "Configure Renovate",
  "optimizeForDisabled": false,
  "packageRules": Array [],
  "password": null,
  "patch": Object {},
  "persistRepoData": false,
  "pin": Object {
    "commitMessageAction": "Pin",
    "group": Object {
      "commitMessageExtra": "",
      "commitMessageTopic": "dependencies",
    },
    "groupName": "Pin Dependencies",
    "groupSlug": "pin-dependencies",
    "rebaseWhen": "behind-base-branch",
    "recreateClosed": true,
    "unpublishSafe": false,
  },
  "pinDigests": false,
  "platform": "github",
  "postUpdateOptions": Array [],
  "postUpgradeTasks": Object {
    "commands": Array [],
    "fileFilters": Array [],
  },
  "prBodyColumns": Array [
    "Package",
    "Type",
    "Update",
    "Change",
  ],
  "prBodyDefinitions": Object {
    "Change": "[{{#if displayFrom}}\`{{{displayFrom}}}\` -> {{else}}{{#if currentValue}}\`{{{currentValue}}}\` -> {{/if}}{{/if}}{{#if displayTo}}\`{{{displayTo}}}\`{{else}}\`{{{newValue}}}\`{{/if}}](https://renovatebot.com/diffs/npm/{{replace '/' '%2f' depName}}/{{{fromVersion}}}/{{{toVersion}}})",
    "Current value": "{{{currentValue}}}",
    "New value": "{{{newValue}}}",
    "Package": "{{{depNameLinked}}}",
    "Package file": "{{{packageFile}}}",
    "References": "{{{references}}}",
    "Type": "{{{depType}}}",
    "Update": "{{{updateType}}}",
  },
  "prBodyNotes": Array [],
  "prCommitsPerRunLimit": 0,
  "prConcurrentLimit": 0,
  "prCreation": "immediate",
  "prFooter": "This PR has been generated by [Renovate Bot](https://github.com/renovatebot/renovate).",
  "prHourlyLimit": 0,
  "prNotPendingHours": 25,
  "prPriority": 0,
  "prTitle": null,
  "printConfig": false,
  "privateKey": null,
  "productLinks": Object {
    "documentation": "https://docs.renovatebot.com/",
    "help": "https://github.com/renovatebot/config-help/issues",
    "homepage": "https://github.com/renovatebot/renovate",
  },
  "pruneStaleBranches": true,
  "rangeStrategy": "replace",
  "rebaseLabel": "rebase",
  "rebaseWhen": "auto",
  "recreateClosed": false,
  "regexManagers": Array [],
  "registryUrls": null,
  "repositories": Array [],
  "requireConfig": true,
  "requiredStatusChecks": Array [],
  "respectLatest": true,
  "reviewers": Array [],
  "reviewersSampleSize": null,
  "rollbackPrs": true,
  "schedule": Array [
    "at any time",
  ],
  "semanticCommitScope": "deps",
  "semanticCommitType": "chore",
  "semanticCommits": null,
  "separateMajorMinor": true,
  "separateMinorPatch": false,
  "separateMultipleMajor": false,
  "skipInstalls": null,
  "stabilityDays": 0,
  "statusCheckVerify": false,
  "supportPolicy": Array [],
  "suppressNotifications": Array [
    "deprecationWarningIssues",
  ],
  "timezone": null,
  "token": null,
  "trustLevel": "low",
  "unicodeEmoji": true,
  "unpublishSafe": false,
  "updateLockFiles": true,
  "updateNotScheduled": true,
  "username": null,
  "versioning": "npm",
  "vulnerabilityAlerts": Object {
    "commitMessageSuffix": "[SECURITY]",
    "groupName": null,
    "masterIssueApproval": false,
    "rangeStrategy": "update-lockfile",
    "schedule": Array [],
  },
  "yarnrc": null,
}
`;

exports[`config/index mergeChildConfig(parentConfig, childConfig) getManagerConfig() 2`] = `
Object {
  "additionalReviewers": Array [],
  "aliases": Object {},
  "allowedPostUpgradeCommands": Array [],
  "assignAutomerge": false,
  "assignees": Array [],
  "assigneesSampleSize": null,
  "autodiscover": false,
  "autodiscoverFilter": null,
  "automerge": false,
  "automergeComment": "automergeComment",
  "automergeType": "pr",
  "azureAutoComplete": false,
  "azureWorkItemId": 0,
  "baseBranches": Array [],
  "baseDir": null,
  "bbUseDefaultReviewers": true,
  "binarySource": "auto",
  "branchName": "{{{branchPrefix}}}{{{managerBranchPrefix}}}{{{branchTopic}}}",
  "branchPrefix": "renovate/",
  "branchTopic": "{{{depNameSanitized}}}-{{{newMajor}}}{{#if isPatch}}.{{{newMinor}}}{{/if}}.x{{#if isLockfileUpdate}}-lockfile{{/if}}",
  "bumpVersion": null,
  "cacheDir": null,
  "commitBody": null,
  "commitBodyTable": false,
  "commitMessage": "{{{commitMessagePrefix}}} {{{commitMessageAction}}} {{{commitMessageTopic}}} {{{commitMessageExtra}}} {{{commitMessageSuffix}}}",
  "commitMessageAction": "Update",
  "commitMessageExtra": "to {{#if isMajor}}v{{{newMajor}}}{{else}}{{#if isSingleVersion}}v{{{toVersion}}}{{else}}{{{newValue}}}{{/if}}{{/if}}",
  "commitMessagePrefix": null,
  "commitMessageSuffix": null,
  "commitMessageTopic": "dependency {{depName}}",
  "compatibility": Object {},
  "composerIgnorePlatformReqs": true,
  "configWarningReuseIssue": true,
  "description": Array [],
  "digest": Object {
    "branchTopic": "{{{depNameSanitized}}}-digest",
    "commitMessageExtra": "to {{newDigestShort}}",
    "commitMessageTopic": "{{{depName}}} commit hash",
    "enabled": false,
  },
  "dockerMapDotfiles": false,
  "dockerUser": null,
  "dryRun": false,
  "enabled": true,
  "enabledManagers": Array [],
  "encrypted": null,
  "endpoint": null,
  "excludeCommitPaths": Array [],
  "extends": Array [],
  "fileMatch": Array [
    "\\\\.html?$",
  ],
  "followTag": null,
  "force": null,
  "forceCli": true,
  "forkMode": false,
  "gitAuthor": null,
  "gitLabAutomerge": false,
  "gitPrivateKey": null,
  "group": Object {
    "branchTopic": "{{{groupSlug}}}",
    "commitMessageTopic": "{{{groupName}}}",
  },
  "groupName": null,
  "groupSlug": null,
  "hostRules": Array [
    Object {
      "timeout": 60000,
    },
  ],
  "ignoreDeprecated": true,
  "ignoreDeps": Array [],
  "ignoreNpmrcFile": false,
  "ignorePaths": Array [
    "**/node_modules/**",
    "**/bower_components/**",
  ],
  "ignorePresets": Array [],
  "ignoreScripts": false,
  "ignoreUnstable": true,
  "includeForks": false,
  "includePaths": Array [],
  "java": Object {},
  "labels": Array [],
  "language": undefined,
  "lazyGrouping": true,
  "lockFileMaintenance": Object {
    "branchTopic": "lock-file-maintenance",
    "commitMessageAction": "Lock file maintenance",
    "commitMessageExtra": null,
    "commitMessageTopic": null,
    "enabled": false,
    "groupName": null,
    "prBodyDefinitions": Object {
      "Change": "All locks refreshed",
    },
    "rebaseStalePrs": true,
    "recreateClosed": true,
    "schedule": Array [
      "before 5am on monday",
    ],
  },
  "logContext": null,
  "logFile": null,
  "logFileLevel": "debug",
  "logLevel": "info",
  "major": Object {},
  "manager": "html",
  "managerBranchPrefix": "",
  "masterIssue": false,
  "masterIssueApproval": false,
  "masterIssueAutoclose": false,
  "masterIssueTitle": "Update Dependencies (Renovate Bot)",
  "minor": Object {},
  "npmToken": null,
  "npmrc": null,
  "onboarding": true,
  "onboardingBranch": "renovate/configure",
  "onboardingConfig": Object {
    "$schema": "https://docs.renovatebot.com/renovate-schema.json",
  },
  "onboardingPrTitle": "Configure Renovate",
  "optimizeForDisabled": false,
  "packageRules": Array [],
  "password": null,
  "patch": Object {},
  "persistRepoData": false,
  "pin": Object {
    "commitMessageAction": "Pin",
    "group": Object {
      "commitMessageExtra": "",
      "commitMessageTopic": "dependencies",
    },
    "groupName": "Pin Dependencies",
    "groupSlug": "pin-dependencies",
    "rebaseWhen": "behind-base-branch",
    "recreateClosed": true,
    "unpublishSafe": false,
  },
  "pinDigests": false,
  "platform": "github",
  "postUpdateOptions": Array [],
  "postUpgradeTasks": Object {
    "commands": Array [],
    "fileFilters": Array [],
  },
  "prBodyColumns": Array [
    "Package",
    "Type",
    "Update",
    "Change",
  ],
  "prBodyDefinitions": Object {
    "Change": "\`{{{displayFrom}}}\` -> \`{{{displayTo}}}\`",
    "Current value": "{{{currentValue}}}",
    "New value": "{{{newValue}}}",
    "Package": "{{{depNameLinked}}}",
    "Package file": "{{{packageFile}}}",
    "References": "{{{references}}}",
    "Type": "{{{depType}}}",
    "Update": "{{{updateType}}}",
  },
  "prBodyNotes": Array [],
  "prCommitsPerRunLimit": 0,
  "prConcurrentLimit": 0,
  "prCreation": "immediate",
  "prFooter": "This PR has been generated by [Renovate Bot](https://github.com/renovatebot/renovate).",
  "prHourlyLimit": 0,
  "prNotPendingHours": 25,
  "prPriority": 0,
  "prTitle": null,
  "printConfig": false,
  "privateKey": null,
  "productLinks": Object {
    "documentation": "https://docs.renovatebot.com/",
    "help": "https://github.com/renovatebot/config-help/issues",
    "homepage": "https://github.com/renovatebot/renovate",
  },
  "pruneStaleBranches": true,
  "rangeStrategy": "replace",
  "rebaseLabel": "rebase",
  "rebaseWhen": "auto",
  "recreateClosed": false,
  "regexManagers": Array [],
  "registryUrls": null,
  "repositories": Array [],
  "requireConfig": true,
  "requiredStatusChecks": Array [],
  "respectLatest": true,
  "reviewers": Array [],
  "reviewersSampleSize": null,
  "rollbackPrs": false,
  "schedule": Array [
    "at any time",
  ],
  "semanticCommitScope": "deps",
  "semanticCommitType": "chore",
  "semanticCommits": null,
  "separateMajorMinor": true,
  "separateMinorPatch": false,
  "separateMultipleMajor": false,
  "skipInstalls": null,
  "stabilityDays": 0,
  "statusCheckVerify": false,
  "supportPolicy": Array [],
  "suppressNotifications": Array [
    "deprecationWarningIssues",
  ],
  "timezone": null,
  "token": null,
  "trustLevel": "low",
  "unicodeEmoji": true,
  "unpublishSafe": false,
  "updateLockFiles": true,
  "updateNotScheduled": true,
  "username": null,
  "versioning": "semver",
  "vulnerabilityAlerts": Object {
    "commitMessageSuffix": "[SECURITY]",
    "groupName": null,
    "masterIssueApproval": false,
    "rangeStrategy": "update-lockfile",
    "schedule": Array [],
  },
  "yarnrc": null,
}
`;

exports[`config/index mergeChildConfig(parentConfig, childConfig) merges 1`] = `
Object {
  "branchTopic": "lock-file-maintenance",
  "commitMessageAction": "Lock file maintenance",
  "commitMessageExtra": null,
  "commitMessageTopic": null,
  "enabled": false,
  "groupName": null,
  "prBodyDefinitions": Object {
    "Change": "All locks refreshed",
  },
  "rebaseStalePrs": true,
  "recreateClosed": true,
  "schedule": Array [
    "on monday",
  ],
}
`;
